Test Org - Speridian/src/objects/BA_Eligiblity_Administration__c.object
<CustomObject>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Unique System Field Name</description>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ba_Calculated__c</fullName>
        <label>Calculated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Default_Value__c</fullName>
        <label>Default Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Eligiblity_Question__c</fullName>
        <label>Eligiblity Question</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Field_Sequence__c</fullName>
        <label>Field Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_Field_Values__c</fullName>
        <label>Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Eligiblity Administration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ba_Field_Sequence__c</columns>
        <columns>NAME</columns>
        <columns>ba_Calculated__c</columns>
        <columns>Field_Name__c</columns>
        <columns>ba_Eligiblity_Question__c</columns>
        <columns>Data_Type__c</columns>
        <columns>ba_Picklist__c</columns>
        <columns>ba_Field_Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EA{0000}</displayFormat>
        <label>Eligiblity Administration  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligiblity Administrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>